include/StTrgApi.h

//-----------------------------------------------------------------------------
//For Specific Camera
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetIOARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_SetIOARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_GetITARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_SetITARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_GetJBARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_SetJBARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);