include/StTrgAPI.vb

	
	'------------------------------------------------------------------------------
	'For Specific Camera
	'------------------------------------------------------------------------------
	Public Declare Function GetIOARegister Lib "StTrgAPI.dll" Alias "StTrg_GetIOARegister" (ByVal hCamera As IntPtr, ByVal dwStartAdd As System.UInt32, ByVal dwEndAdd As System.UInt32,  pwValue As IntPtr) As integer
	Public Declare Function SetIOARegister Lib "StTrgAPI.dll" Alias "StTrg_SetIOARegister" (ByVal hCamera As IntPtr, ByVal dwStartAdd As System.UInt32, ByVal dwEndAdd As System.UInt32,  pwValue As IntPtr) As integer
	Public Declare Function GetITARegister Lib "StTrgAPI.dll" Alias "StTrg_GetITARegister" (ByVal hCamera As IntPtr, ByVal dwStartAdd As System.UInt32, ByVal dwEndAdd As System.UInt32,  pwValue As IntPtr) As integer
	Public Declare Function SetITARegister Lib "StTrgAPI.dll" Alias "StTrg_SetITARegister" (ByVal hCamera As IntPtr, ByVal dwStartAdd As System.UInt32, ByVal dwEndAdd As System.UInt32,  pwValue As IntPtr) As integer
	Public Declare Function GetJBARegister Lib "StTrgAPI.dll" Alias "StTrg_GetJBARegister" (ByVal hCamera As IntPtr, ByVal dwStartAdd As System.UInt32, ByVal dwEndAdd As System.UInt32,  pwValue As IntPtr) As integer
	Public Declare Function SetJBARegister Lib "StTrgAPI.dll" Alias "StTrg_SetJBARegister" (ByVal hCamera As IntPtr, ByVal dwStartAdd As System.UInt32, ByVal dwEndAdd As System.UInt32,  pwValue As IntPtr) As integer
